# code-graph

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/retriever/: Cargo.toml
crates/retriever/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
migrations/: 001_init.sql
