[package]
name = "code_graph_retriever"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
code_graph_db = { path = "../db" }
code_graph_shared = { path = "../shared" }
qdrant-client.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
